# IM-Server

./: .gitignore  CMakeLists.txt  PublicFunction.cpp  PublicFunction.hpp  README.md  httpserver  log4cxx.properties  main.cpp
.github/workflows/: cmake-multi-platform.yml
ChatClient/: CMakeLists.txt  ChatClient.cpp  ChatClient.h
ChatServer/: CMakeLists.txt  ChatServer.cpp  ChatServer.h
HttpServer/: CMakeLists.txt  HttpServer.cpp  HttpServer.h  PostHandle.cpp  PostHandle.h  main.cpp
MysqlQuery/: AddFriendCacheTable.cpp  AddFriendCacheTable.h  CMakeLists.txt  ChatMsgCacheTable.cpp  ChatMsgCacheTable.h  DataBaseOperate.cpp  DataBaseOperate.h  FriendInfoTable.cpp  FriendInfoTable.h  GroupChatInfoTable.cpp  GroupChatInfoTable.h  GroupChatRecordTable.cpp  GroupChatRecordTable.h  GroupChatUserInfoTable.cpp  GroupChatUserInfoTable.h  MysqlQuery.cpp  MysqlQuery.h  UserInfoTable.cpp  UserInfoTable.h
include/mysql/: mysql_version.h  mysqld_error.h
lib/: libboost_chrono-vc143-mt-x64-1_79.lib  libboost_serialization-vc143-mt-x64-1_79.lib  libboost_thread-vc143-mt-gd-x32-1_79.lib  libboost_thread-vc143-mt-x64-1_79.lib  log4cxx.lib  mysqlservices.lib
module/: CMakeLists.txt  Log.cpp  Log.h
protocol/: AddFriendNotifyJsonData.cpp  AddFriendNotifyJsonData.h  AddFriendRequestJsonData.cpp  AddFriendRequestJsonData.h  AddFriendResponseJsonData.cpp  AddFriendResponseJsonData.h  CMakeLists.txt  GetFriendListJsonData.cpp  GetFriendListJsonData.h  GetFriendListReplyData.cpp  GetFriendListReplyData.h  GetProfileImageJsonData.cpp  GetProfileImageJsonData.h  HeartPackageJsonData.cpp  HeartPackageJsonData.h  InitialRequestJsonData.cpp  InitialRequestJsonData.h  JsonBaseData.h  LoginInJsonData.cpp  LoginInJsonData.h  LoginInRelpyData.cpp  LoginInReplyData.h  Mydefine.h  ProfileImageMsgJsonData.cpp  ProfileImageMsgJsonData.h  RegisterJsonData.cpp  RegisterJsonData.h  RegisterReplyData.cpp  RegisterReplyData.h  SingleChatMessageJsonData.cpp  SingleChatMessageJsonData.h  StartGroupChatJsonData.cpp  StartGroupChatJsonData.h  StartGroupChatReplyJsonData.cpp  StartGroupChatReplyJsonData.h
protocol/ImageJsonData/: ImageJsonDataBase.h  StartGroupChatJsonData.cpp  StartGroupChatJsonData.h
protocol/RegisterJsonData/: RegisterJsonData.cpp  RegisterJsonData.h
